--- a/config/group_vars/slurm-cluster.yml
+++ b/config/group_vars/slurm-cluster.yml
@@ -36,12 +36,15 @@ partition_settings:
   a100:
     slurm_def_mem_per_cpu: 7000
     slurm_max_job_timelimit: 10080
+    default: false
   a6000:
     slurm_def_mem_per_cpu: 7000
     slurm_max_job_timelimit: 10080
+    default: false
   rtx2080ti:
     slurm_def_mem_per_cpu: 9000
     slurm_max_job_timelimit: 20160
+    default: true
 
 # Slurm default partition
 slurm_partition_name: batch
