--- a/roles/slurm/templates/etc/slurm/slurm.conf
+++ b/roles/slurm/templates/etc/slurm/slurm.conf
@@ -64,7 +64,7 @@ Epilog={{ slurm_config_dir }}/epilog.sh
 {% endif %}
 #SrunProlog=
 #SrunEpilog=
-#TaskProlog=
+TaskProlog={{ slurm_config_dir }}/task_prolog.sh
 #TaskEpilog=
 
 {% if slurm_health_check_program is defined %}
@@ -163,7 +163,9 @@ GresTypes=gpu
 {% set slurm_oversubscribe = (slurm_manage_gpus == true)|ternary('NO', 'EXCLUSIVE') %}
 {% set memory_per_partition=partition_settings[partition_name]["slurm_def_mem_per_cpu"] %}
 {% set max_job_timelimit=partition_settings[partition_name]["slurm_max_job_timelimit"] %}
+{% set default_partition=partition_settings[partition_name]["default"] %}
+{% set is_default=(default_partition == true)|ternary('YES', 'NO') %}
 
-# {{ memory_per_partition }} {{ max_job_timelimit }}
-PartitionName={{ partition_name }} Nodes={{ nodenames }} State=UP OverSubscribe={{ slurm_oversubscribe }} {%- if slurm_max_job_timelimit is defined %} MaxTime={{ max_job_timelimit }} {%- else %} MaxTime=INFINITE {% endif -%} {%- if slurm_default_job_timelimit is defined %} DefaultTime={{ slurm_default_job_timelimit }} {% endif -%} {%- if slurm_grace_time is defined %} GraceTime={{ slurm_grace_time }} {%- else %} GraceTime=0 {% endif -%} {%- if slurm_def_mem_per_cpu is defined %} DefMemPerCPU={{ memory_per_partition }} {%- else %}{% endif %}
+# {{ memory_per_partition }} {{ max_job_timelimit }} {{ is_default }}
+PartitionName={{ partition_name }} Nodes={{ nodenames }} State=UP Default={{ is_default }} OverSubscribe={{ slurm_oversubscribe }} {%- if slurm_max_job_timelimit is defined %} MaxTime={{ max_job_timelimit }} {%- else %} MaxTime=INFINITE {% endif -%} {%- if slurm_default_job_timelimit is defined %} DefaultTime={{ slurm_default_job_timelimit }} {% endif -%} {%- if slurm_grace_time is defined %} GraceTime={{ slurm_grace_time }} {%- else %} GraceTime=0 {% endif -%} {%- if memory_per_partition is defined %} DefMemPerCPU={{ memory_per_partition }} {%- else %}{% endif %}
 {% endfor %}
