Add schrodinger to inventory

--- a/config/group_vars/slurm-cluster.yml
+++ b/config/group_vars/slurm-cluster.yml
@@ -81,7 +81,9 @@ slurm_login_on_compute: false
 slurm_configure_etc_hosts: yes
 dns_mode: none
 slurm_cluster_install_cuda: no
-slurm_cluster_install_nvidia_driver: no  # This does not work well
+slurm_cluster_install_nvidia_driver: yes  # This does not work well
+nvidia_driver_ubuntu_branch: "470"
+nvidia_driver_skip_reboot: false
 slurm_cluster_install_singularity: yes
 
 ################################################################################
