--- a/playbooks/slurm-cluster.yml
+++ b/playbooks/slurm-cluster.yml
@@ -17,7 +17,7 @@
 
 # Configure hostnames, /etc/hosts
 - include: generic/hosts.yml
-  when: "{{ slurm_configure_etc_hosts | default(true) }}"
+  when: slurm_configure_etc_hosts|default(true)
   tags:
   - set-etc-hosts
 
