--- a/playbooks/slurm-cluster/nvidia-dcgm-exporter.yml
+++ b/playbooks/slurm-cluster/nvidia-dcgm-exporter.yml
@@ -1,6 +1,6 @@
 ---
 - include: ../container/docker.yml
-# - include: ../nvidia-software/nvidia-driver.yml
+- include: ../nvidia-software/nvidia-driver.yml
 - include: ../container/nvidia-docker.yml
 
 - hosts:  "{{ hostlist | default('all') }}"
@@ -12,8 +12,8 @@
     - name: set GPU fact
       set_fact:
         has_gpus: true
-#      when: ansible_local['gpus']['count']
+      when: ansible_local['gpus']['count']
     - name: configure dcgm exporter
       include_role:
         name: nvidia-dcgm-exporter
-#      when: ansible_distribution == "Ubuntu" or ansible_os_family == "RedHat"
+      when: ansible_distribution == "Ubuntu" or ansible_os_family == "RedHat"
