--- a/roles/slurm/tasks/build.yml
+++ b/roles/slurm/tasks/build.yml
@@ -14,7 +14,7 @@
 
 - name: update ld cache
   command: ldconfig
-  when: updated_slurm_ld.changed
+  when: updated_slurm_ld.changed # noqa no-handler
 
 - include: munge.yml
 
@@ -39,6 +39,7 @@
   shell: "{{ slurm_install_prefix }}/sbin/slurmd --version | awk '{print $2}'"
   register: slurmd_reported_version
   ignore_errors: yes
+  changed_when: slurmd_reported_version.rc != 0
 
 - name: don't build slurm if it's already installed, unless forced
   set_fact:
@@ -67,6 +68,14 @@
   with_items: "{{ slurm_build_deps }}"
   when: ansible_distribution == 'Ubuntu'
 
+- name: install build dependencies ubuntu 20
+  apt:
+    name: "{{ item }}"
+    state: present
+    update_cache: yes
+  with_items: "{{ slurm_build_deps_20 }}"
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_major_version == "20"
+
 - name: install build dependencies
   yum:
     name: "{{ item }}"
@@ -94,7 +103,7 @@
     - slurmdbd
     - slurmd
   when: ansible_distribution == 'Ubuntu'
-  ignore_errors: yes
+  failed_when: false
 
 - name: remove slurm packages
   yum:
@@ -103,12 +112,49 @@
   with_items:
     - slurm
   when: ansible_os_family == 'RedHat'
-  ignore_errors: yes
+  failed_when: false
+
+- name: gather service facts
+  ansible.builtin.service_facts:
+
+- name: when building, try to uninstall first before downloading source
+  when: slurm_build
+  block:
+    # This service should be stopped before uninstalling slurm
+  - name: stop docker slurm exporter service to prevent subfolder creation
+    service:
+      name: "docker.slurm-exporter.service"
+      state: stopped
+    when: (ansible_distribution == 'Ubuntu') and
+      ("docker.slurm-exporter.service" in ansible_facts.services)
+
+  - name: check that we have an old build dir
+    stat:
+      path: "{{ slurm_build_dir }}"
+    register: slurm_old_build_dir
+
+  - name: uninstall old verson
+    command: make -j uninstall
+    args:
+      chdir: "{{ slurm_build_dir }}"
+    ignore_errors: yes
+    when: slurm_old_build_dir.stat.exists
+
+  - name: remove old build dir
+    file:
+      path: "{{ slurm_build_dir }}"
+      state: absent
+
+  - name: remove old lib dir
+    file:
+      path: "{{ slurm_install_prefix }}/lib/slurm"
+      state: absent
 
 - name: make build directory
   file:
     path: "{{ slurm_build_dir }}"
     state: directory
+    mode: "0755"
   when: slurm_build
 
 - name: download source
@@ -118,23 +164,14 @@
     dest: "{{ slurm_build_dir }}"
     extra_opts:
       - --strip-components=1
-  environment: "{{proxy_env if proxy_env is defined else {}}}"
+  environment: "{{ proxy_env if proxy_env is defined else {} }}"
   when: slurm_build
-
-- name: uninstall old version
-  command: make -j uninstall
-  args:
-    chdir: "{{ slurm_build_dir }}"
-  ignore_errors: yes
-  when: slurm_build
-  tags:
-    - uninstall
 
 - name: clean src dir
   command: make distclean
   args:
     chdir: "{{ slurm_build_dir }}"
-  ignore_errors: yes
+  failed_when: false
   when: slurm_build
 
 - name: configure
@@ -197,9 +234,16 @@
     state: directory
     mode: 0775
 
-- name: fix cluster management dir permissions
+- name: fix deepops dir permissions
   file:
     path: "{{ deepops_dir }}"
     state: directory
     mode: 0755
     recurse: yes
+
+- name: start docker slurm exporter service again
+  service:
+    name: "docker.slurm-exporter.service"
+    state: restarted
+  when: (ansible_distribution == 'Ubuntu') and
+      ("docker.slurm-exporter.service" in ansible_facts.services)
