--- a/roles/slurm/tasks/login-compute-setup.yml
+++ b/roles/slurm/tasks/login-compute-setup.yml
@@ -2,6 +2,7 @@
 
 - name: Hide GPUs for regular user logins via sshd.service.
   shell: |
+    set -o pipefail
     deviceprop=$(systemctl show sshd.service -p DeviceAllow | grep -i nvidiactl)
 
     if [ -z "$deviceprop" ] ; then
@@ -20,7 +21,7 @@
     path: /etc/slurm/epilog.d/40-lastuserjob-processes
     block: |
 
-      if grep -q -w "$SLURM_JOB_USER" /etc/slurm/login.local.user.allowed.backup ; then
+      if grep -q -w "$SLURM_JOB_USER" /etc/slurm/localusers.backup ; then
           exit 0  # don't revoke access for these users
       fi
 
