--- a/roles/spack/tasks/main.yml
+++ b/roles/spack/tasks/main.yml
@@ -1,9 +1,18 @@
 ---
-- name: ensure development tools are installed
+- name: ensure development tools are installed (Ubuntu)
   apt:
+    update_cache: yes
     name: "{{ item }}"
     state: "present"
   with_items: "{{ spack_ubuntu_deps }}"
+  when: ansible_distribution == "Ubuntu"
+
+- name: ensure development tools are installed (Red Hat)
+  package:
+    name: "{{ item }}"
+    state: "present"
+  with_items: "{{ spack_redhat_deps }}"
+  when: ansible_os_family == "RedHat"
 
 - name: ensure install directory exists
   file:
@@ -19,9 +28,22 @@
     dest: "{{ spack_install_dir }}"
     version: "{{ spack_version }}"
 
+- name: set up spack profile scripts
+  template:
+    src: "{{ item }}"
+    dest: "/etc/profile.d/{{ item }}"
+    owner: "root"
+    group: "root"
+    mode: "0755"
+  with_items:
+  - "z00_spack.sh"
+  - "z00_spack.csh"
+
 - name: source spack environment once for initialization
   shell: |
       . /etc/profile.d/z00_spack.sh
+  register: source_spack_env
+  changed_when: source_spack_env.rc != 0
 
 - name: build spack packages
   shell: |
