--- a/roles/slurm/defaults/main.yml
+++ b/roles/slurm/defaults/main.yml
@@ -1,3 +1,4 @@
+deepops_dir: /opt/kosmos-cluster
 slurm_build_dir: /opt/kosmos-cluster/build/slurm
 hwloc_build_dir: /opt/kosmos-cluster/build/hwloc
 pmix_build_dir: /opt/kosmos-cluster/build/pmix
@@ -86,6 +87,11 @@ epilog_fileglob:
 
 # Disable clearing of shared memory when user login shell exits
 slurm_fix_shm: true
+
+# Configure pam_slurm_adopt to adopt processes from user SSH into a job cgroup
+slurm_enable_pam_slurm_adopt: true
+# Restrict user SSH access to only allow users with a running job
+slurm_restrict_node_access: true
 
 slurm_include_hwloc: yes
 hwloc_version: 2.5.0
