--- a/config/group_vars/slurm-cluster.yml
+++ b/config/group_vars/slurm-cluster.yml
@@ -178,7 +178,7 @@ openmpi_configure: "./configure --prefix={{ openmpi_install_prefix }} --disable-
 ################################################################################
 # Open OnDemand                                                                #
 ################################################################################
-install_open_ondemand: yes
+install_open_ondemand: no
 # OOD Linux-host adapter requires `slurm_cluster_install_singularity` to be true
 ood_install_linuxhost_adapter: no
 
