--- a/roles/slurm/tasks/build.yml
+++ b/roles/slurm/tasks/build.yml
@@ -74,7 +74,7 @@
     state: present
     update_cache: yes
   with_items: "{{ slurm_build_deps_20 }}"
-  when: ansible_distribution == 'Ubuntu' and ansible_distribution_major_version == "20"
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_release == "fossa"
 
 - name: install build dependencies
   yum:
