--- a/roles/slurm/tasks/compute.yml
+++ b/roles/slurm/tasks/compute.yml
@@ -191,7 +191,8 @@
     path: /etc/pam.d/sshd
     block: |
       -account sufficient {{ slurm_pam_lib_dir }}/pam_slurm_adopt.so action_no_jobs=ignore
-      -account sufficient pam_listfile.so item=user sense=allow file=/etc/localusers
+      -account sufficient pam_listfile.so item=user sense=allow file=/etc/login.local.user.allowed
+      -account sufficient pam_listfile.so onerr=fail item=group sense=allow file=/etc/login.local.group.allowed
     insertafter: EOF
     marker: "# {mark} ANSIBLE MANAGED BLOCK (ansible-role-slurm)"
   tags:
