--- a/roles/slurm/templates/etc/slurm/slurm.conf
+++ b/roles/slurm/templates/etc/slurm/slurm.conf
@@ -123,7 +123,7 @@ AccountingStorageTRES=gres/gpu
 AccountingStorageType=accounting_storage/slurmdbd
 AccountingStorageHost={{ groups["slurm-master"][0] }}
 #AccountingStorageLoc=
-#AccountingStorageEnforce=associations,limits,qos
+AccountingStorageEnforce=associations,limits,qos
 AccountingStorageUser={{ slurm_db_username }}
 AccountingStoragePass=/var/run/munge/munge.socket.2
 
@@ -147,6 +147,7 @@ GresTypes=gpu
 {% endfor %}
 
 
+# TODO create this as a fact
 {% set partition_nodes = {} %}
 {% for node_name in groups["slurm-node"] %}
     {% set partition_name = hostvars[node_name]["slurm_partition_name"] -%}
