--- a/config/group_vars/slurm-cluster.yml
+++ b/config/group_vars/slurm-cluster.yml
@@ -40,12 +40,12 @@ partition_settings:
     default: false
   a6000:
     slurm_def_mem_per_cpu: 7000
-    slurm_allow_qos: "ALL"
+    slurm_allow_qos: normal
     slurm_max_job_timelimit: 10080
     default: false
   rtx2080ti:
     slurm_def_mem_per_cpu: 9000
-    slurm_allow_qos: "ALL"
+    slurm_allow_qos: normal,rtxqos
     slurm_max_job_timelimit: 20160
     default: true
 
