--- a/config/group_vars/slurm-cluster.yml
+++ b/config/group_vars/slurm-cluster.yml
@@ -40,7 +40,7 @@ partition_settings:
     default: false
   a6000:
     slurm_def_mem_per_cpu: 7000
-    slurm_allow_qos: normal
+    slurm_allow_qos: normal,a100
     slurm_max_job_timelimit: 10080
     default: false
   rtx2080ti:
