--- a/roles/slurm/templates/etc/slurm/gres.conf
+++ b/roles/slurm/templates/etc/slurm/gres.conf
@@ -1,6 +1,10 @@
 {% set cpu_topology = ansible_local["topology"]["cpu_topology"] -%}
 {% set gpu_topology = ansible_local["topology"]["gpu_topology"] -%}
 
+# {{ ansible_local }}
+# {{ hostvars }}
+# {{ inventory_hostname }}
+
 {% for affinity in gpu_topology %}
 Name=gpu File=/dev/nvidia{{ loop.index0 }} CPUs={{ affinity }}
 {% endfor %}
