--- a/playbooks/generic/rsyslog-server.yml
+++ b/playbooks/generic/rsyslog-server.yml
@@ -2,7 +2,7 @@
 - hosts: "{{ hostlist | default('all') }}"
   become: yes
   roles:
-  - rsyslog_server
+  - rsyslog-server
   tags:
   - rsyslog-server
   - rsyslog
