--- a/playbooks/slurm-cluster.yml
+++ b/playbooks/slurm-cluster.yml
@@ -84,8 +84,8 @@
   when: slurm_install_lmod
 
 # Install spack
-- include: slurm-cluster/spack-modules.yml
-  when: slurm_install_spack
+#- include: slurm-cluster/spack-modules.yml
+#  when: slurm_install_spack
 
 # Update motd
 - include: slurm-cluster/motd.yml
