--- a/roles/nvidia-dcgm/defaults/main.yml
+++ b/roles/nvidia-dcgm/defaults/main.yml
@@ -1,21 +1,5 @@
 ---
-# 'cuda' is the generic package and will pull the latest version
-cuda_version: "cuda-toolkit-11-3"
-
-# DGX-specific vars may be used to target specific models,
-# because available versions for DGX may differ from the generic repo
-cuda_dgx_1_version: "{{ cuda_version }}"
-cuda_dgx_2_version: "{{ cuda_version }}"
-cuda_dgx_a100_version: "{{ cuda_version }}"
-
-# To install a specific CUDA package on DGX, define cuda_dgx_override.
-# We override DGX version separately because DGX OS may release at a different
-# cadence than the toolkit repository.
-#cuda_dgx_override_version: "{{ cuda_version }}"
-
-# Should we install the /etc/profile.d/cuda-vars.sh script that will put
-# the CUDA toolkit binaries and libraries in the default environment?
-cuda_toolkit_add_profile_script: yes
+dcgm_pkg_name: "datacenter-gpu-manager"
 
 # RedHat family
 epel_package: "https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version }}.noarch.rpm"
