--- a/playbooks/slurm-cluster.yml
+++ b/playbooks/slurm-cluster.yml
@@ -59,10 +59,10 @@
 #  vars:
 #    hostlist: "{{ nfs_server_group | default('slurm-master[0]') }}"
 #  when: slurm_enable_nfs_server
-#- include: generic/nfs-client.yml
-#  vars:
-#    hostlist: "{{ nfs_client_group | default('slurm-master[1:],slurm-node') }}"
-#  when: slurm_enable_nfs_client_nodes
+- include: generic/nfs-client.yml
+  vars:
+    hostlist: "{{ nfs_client_group | default('slurm-login,slurm-node') }}"
+  when: slurm_enable_nfs_client_nodes
 
 # Install DCGM
 - include: nvidia-software/nvidia-dcgm.yml hostlist=slurm-node
