--- a/playbooks/slurm-cluster/create_mounts.yml
+++ b/playbooks/slurm-cluster/create_mounts.yml
@@ -7,6 +7,7 @@
       - direct
       - mmd-pcr
       - mri_seq2seq
+      - mri_seq2seq_data
       - nki-breast-mri
       - tcr-bert
       - y_gao_temporary
