--- a/playbooks/slurm-cluster/create_mounts.yml
+++ b/playbooks/slurm-cluster/create_mounts.yml
@@ -5,6 +5,12 @@
     - name: Gather custom facts
       include_role:
         name: facts
+    - name: Dump
+      delegate_to: localhost
+      run_once: true
+      copy:
+       content: "{{ ansible_local | to_nice_json }}"
+       dest: /tmp/setup-dump.json
     - name: Create mount points
       include_role:
         name: create-mounts
