--- a/config/group_vars/slurm-cluster.yml
+++ b/config/group_vars/slurm-cluster.yml
@@ -44,10 +44,20 @@ partition_settings:
     slurm_max_job_timelimit: 10080
     default: false
   rtx2080ti:
+    slurm_def_mem_per_cpu: 5700
+    slurm_allow_qos: normal,rtxqos,fourgpu
+    slurm_max_job_timelimit: 10080
+    default: false
+  rtx2080ti_sm:
     slurm_def_mem_per_cpu: 9000
     slurm_allow_qos: normal,rtxqos,fourgpu
     slurm_max_job_timelimit: 20160
     default: true
+  p6000:
+    slurm_def_mem_per_cpu: 3000
+    slurm_allow_qos: normal,a100,fourgpu
+    slurm_max_job_timelimit: 10080
+    default: false
 
 # Slurm default partition
 # slurm_partition_name: batch
