--- a/config/group_vars/slurm-cluster.yml
+++ b/config/group_vars/slurm-cluster.yml
@@ -70,7 +70,7 @@ hosts_add_ansible_managed_hosts_groups: ["slurm-cluster"]
 #       Ideally this is on external NFS server and not the primary control node, since its failure
 #       would also take down that NFS share
 slurm_enable_ha: false
-slurm_ha_state_save_location: "/mnt/sw/slurm"
+slurm_ha_state_save_location: "/sw/slurm"
 
 # Slurm configuration is auto-generated from templates in the `slurm` role.
 # If you want to override any of these files with custom config files, please
@@ -147,7 +147,7 @@ slurm_install_lmod: true
 slurm_install_spack: true
 
 # Note: the sm_prefix must be in an NFS-shared location
-sm_prefix: "/mnt/sw"
+sm_prefix: "/sw"
 
 
 # Spack-specific
