--- a/roles/spack/defaults/main.yml
+++ b/roles/spack/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 spack_repo: "https://github.com/spack/spack.git"
-spack_install_dir: "/mnt/sw/spack"
+spack_install_dir: "/sw/spack"
 spack_version: "v0.18.1"
 spack_user: "root"
 spack_group: "root"
