--- a/config/group_vars/slurm-cluster.yml
+++ b/config/group_vars/slurm-cluster.yml
@@ -55,7 +55,12 @@ partition_settings:
     default: true
   p6000:
     slurm_def_mem_per_cpu: 3000
-    slurm_allow_qos: normal,a100,fourgpu
+    slurm_allow_qos: normal,rtxqos,fourgpu
+    slurm_max_job_timelimit: 10080
+    default: false
+  rtx8000:
+    slurm_def_mem_per_cpu: 6000
+    slurm_allow_qos: normal,rtxqos,fourgpu
     slurm_max_job_timelimit: 10080
     default: false
 
