fix spack config

--- a/config/group_vars/slurm-cluster.yml
+++ b/config/group_vars/slurm-cluster.yml
@@ -157,9 +157,10 @@ sm_prefix: "/sw"
 
 # Spack-specific
 spack_install_dir: "{{ sm_prefix }}/spack"
-spack_build_packages: false
+spack_build_packages: true
 spack_default_packages:
-- "7z"
+- "cuda@11.3.0"
+- "cuda@11.6.0"
 
 
 
