--- a/config/group_vars/slurm-cluster.yml
+++ b/config/group_vars/slurm-cluster.yml
@@ -35,31 +35,37 @@ slurm_grace_time: 120
 partition_settings:
   a100:
     slurm_def_mem_per_cpu: 7000
+    slurm_def_cpu_per_gpu: 16
     slurm_allow_qos: a100
     slurm_max_job_timelimit: 10080
     default: false
   a6000:
     slurm_def_mem_per_cpu: 7000
+    slurm_def_cpu_per_gpu: 16
     slurm_allow_qos: normal,a100,fourgpu
     slurm_max_job_timelimit: 10080
     default: false
   rtx2080ti:
     slurm_def_mem_per_cpu: 5700
+    slurm_def_cpu_per_gpu: 8
     slurm_allow_qos: normal,rtxqos,fourgpu
     slurm_max_job_timelimit: 10080
     default: false
   rtx2080ti_sm:
-    slurm_def_mem_per_cpu: 9000
+    slurm_def_mem_per_cpu: 3700
+    slurm_def_cpu_per_gpu: 12
     slurm_allow_qos: normal,rtxqos,fourgpu
     slurm_max_job_timelimit: 20160
     default: true
   p6000:
     slurm_def_mem_per_cpu: 3000
+    slurm_def_cpu_per_gpu: 10
     slurm_allow_qos: normal,rtxqos,fourgpu
     slurm_max_job_timelimit: 10080
     default: false
   rtx8000:
     slurm_def_mem_per_cpu: 6000
+    slurm_def_cpu_per_gpu: 10
     slurm_allow_qos: normal,rtxqos,fourgpu
     slurm_max_job_timelimit: 10080
     default: false
