--- a/roles/slurm/templates/etc/slurm/slurm.conf
+++ b/roles/slurm/templates/etc/slurm/slurm.conf
@@ -164,11 +164,12 @@ GresTypes=gpu
 {% set nodenames=partition_nodes[partition_name]|join(",") -%}
 {% set slurm_oversubscribe = (slurm_manage_gpus == true)|ternary('NO', 'EXCLUSIVE') %}
 {% set memory_per_partition=partition_settings[partition_name]["slurm_def_mem_per_cpu"] %}
+{% set cpu_per_gpu=partition_settings[partition_name]["slurm_def_cpu_per_gpu"] %}
 {% set max_job_timelimit=partition_settings[partition_name]["slurm_max_job_timelimit"] %}
 {% set default_partition=partition_settings[partition_name]["default"] %}
 {% set is_default=(default_partition == true)|ternary('YES', 'NO') %}
 {% set slurm_allow_qos=partition_settings[partition_name]["slurm_allow_qos"] %}
 
 # {{ memory_per_partition }} {{ max_job_timelimit }} {{ is_default }}
-PartitionName={{ partition_name }} Nodes={{ nodenames }} State=UP Default={{ is_default }} OverSubscribe={{ slurm_oversubscribe }} {%- if slurm_max_job_timelimit is defined %} MaxTime={{ max_job_timelimit }} {%- else %} MaxTime=INFINITE {% endif -%} {%- if slurm_default_job_timelimit is defined %} DefaultTime={{ slurm_default_job_timelimit }} {% endif -%} {%- if slurm_grace_time is defined %} GraceTime={{ slurm_grace_time }} {%- else %} GraceTime=0 {% endif -%} {%- if memory_per_partition is defined %} DefMemPerCPU={{ memory_per_partition }} {%- else %}{% endif %} AllowQos={{ slurm_allow_qos }}
+PartitionName={{ partition_name }} Nodes={{ nodenames }} State=UP Default={{ is_default }} OverSubscribe={{ slurm_oversubscribe }} {%- if slurm_max_job_timelimit is defined %} MaxTime={{ max_job_timelimit }} {%- else %} MaxTime=INFINITE {% endif -%} {%- if slurm_default_job_timelimit is defined %} DefaultTime={{ slurm_default_job_timelimit }} {% endif -%} {%- if slurm_grace_time is defined %} GraceTime={{ slurm_grace_time }} {%- else %} GraceTime=0 {% endif -%} {%- if memory_per_partition is defined %} DefMemPerCPU={{ memory_per_partition }} {%- else %}{% endif %} {%- if cpu_per_gpu is defined %} DefMemPerCPU={{ cpu_per_gpu }} {%- else %}{% endif %} AllowQos={{ slurm_allow_qos }}
 {% endfor %}
