--- a/config/group_vars/all.yml
+++ b/config/group_vars/all.yml
@@ -25,8 +25,8 @@
 ################################################################################
 # DNS config
 # Playbook: dns-config
-#dns_config_servers: [8.8.8.8]
-#dns_config_search: [example.com]
+dns_config_servers: [127.0.0.53]
+dns_config_search: [rhpc.nki.nl]
 
 # NTP configuration
 # Playbook: chrony-client
