--- a/config/group_vars/all.yml
+++ b/config/group_vars/all.yml
@@ -122,7 +122,9 @@ sftp_chroot: false
 ################################################################################
 # NVIDIA GPU configuration
 # Playbook: nvidia-cuda
-cuda_version: cuda-toolkit-11-4
+# Install latest version by default,
+# if you want a specific version, use i.e. cuda-toolkit=12.2.0-1
+# cuda_version: cuda-toolkit
 
 # DGX-specific vars may be used to target specific models,
 # because available versions for DGX may differ from the generic repo
@@ -148,7 +150,7 @@ nvidia_driver_force_install: false
 #
 # For supported Docker versions, see: kubespray/roles/container-engine/docker/vars/*
 docker_install: yes
-docker_version: '20.10'
+#docker_version: 'latest'
 docker_dns_servers_strict: no
 docker_storage_options: -s overlay2
 #docker_options: "--bip=192.168.99.1/24"
@@ -196,7 +198,7 @@ enroot_environ_config_files_dgx:
 # Singularity configuration
 # Playbook: singularity, slurm-cluster
 # Singularity target version
-singularity_version: "3.7.3"
+#singularity_version: "3.7.3"
 singularity_conf_path: "/etc/singularity/singularity.conf"
 bind_paths: []
   # example:
@@ -274,10 +276,6 @@ deepops_dir: /opt/kosmos-cluster
 # Directory for python virtualenv
 # Roles: K8s GPU operator, GPU plugin, OpenShift/K8s
 deepops_venv: '{{ deepops_dir }}/venv'
-
-# OpenMPI
-# Playbook: openmpi
-openmpi_version: 4.0.3
 
 # Disable cloud-init
 deepops_disable_cloud_init: true
