--- a/playbooks/container/docker.yml
+++ b/playbooks/container/docker.yml
@@ -6,11 +6,12 @@
   - docker
   vars_files:
     # include kubespray-defaults here so that we can set the facts using the
-    # kubespray 0040-set_facts.yml tasks
+    # kubespray 0020-set_facts.yml tasks
     - ../../submodules/kubespray/roles/kubespray-defaults/defaults/main.yaml
+    - ../../submodules/kubespray/roles/kubernetes/preinstall/defaults/main.yml
   tasks:
     - name: include kubespray task to set facts required for docker role
-      include: ../../submodules/kubespray/roles/kubernetes/preinstall/tasks/0040-set_facts.yml
+      include: ../../submodules/kubespray/roles/kubernetes/preinstall/tasks/0020-set_facts.yml
       when: docker_install | default('yes')
     - name: remove docker overrides, specifically to deal with conflicting options from DGX OS
       file:
